<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item1"
        android:orderInCategory="1"
        android:title="@string/search"
        app:showAsAction="withText|ifRoom"
        android:icon="@android:drawable/ic_menu_search" />
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/item2"
        android:orderInCategory="1"
        android:title="@string/schedule" />
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/item3"
        android:orderInCategory="1"
        android:title="@string/appointment"/>
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/item4"
        android:orderInCategory="1"
        android:title="@string/before"/>
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/item5"
        android:orderInCategory="1"
        android:title="@string/after"/>
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/item6"
        android:orderInCategory="1"
        android:title="@string/AboutUs"/>
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/item7"
        android:orderInCategory="1"
        android:title="@string/till"/>
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/item8"
        android:orderInCategory="1"
        android:title="@string/end"/>
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/item9"
        android:orderInCategory="1"
        android:title="@string/schedule"/>
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/item10"
        android:orderInCategory="1"
        android:title="@string/before"/>
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/item11"
        android:orderInCategory="1"
        android:title="@string/search"/>
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/item12"
        android:orderInCategory="1"
        android:title="@string/AboutUs"/>
    <item
        app:showAsAction="ifRoom"
        android:id="@+id/item13"
        android:orderInCategory="1"
        android:title="@string/whats"/>
</menu>
